# YoutubeVideos

./: .gitignore  EnglishCourses.md  README.md  UdemyKurse.pptx
5CodingTips/: Video_Ideen.md  abbr.py  functions_one_thing.cc  magic_numbers.py  useless_comments.py
C_Cpp_VSCode/: .gitignore  test_c.c  test_cpp.cc
ClangC/: .clang-format  .clang-tidy  CMakeLists.txt
ClangC/app/: Main.c
ClangC/src/: CsvReader.c
Docker/: Docker.md
Kryptographie/AES/: .gitignore  encrypted.txt
Kryptographie/AES/src/: AES.cpp  (+6 more)
Kryptographie/RSA/: LICENSE  README.md
Kryptographie/SDES/: README.md
LanguageCompare/: .gitignore
LanguageCompare/MatrixMultiply/: Times.md  plot.py
LanguageCompare/Primes/: Times.md  plot.py
Podcast/: Episode1.md  Episode2.md  Episode3.md  Episode4.md  Episode5.md  Episode6.md  Episode7.md  Episode8.md  Planned.md  _planned.md
Programmieren in C/Video1-HelloWorld/: HelloWorld.c
Programmieren in C/Video10-Array/: Array.c
Programmieren in C/Video11-String/: String.c
Programmieren in C/Video12-ArraysVergleichenUndAnzahlDerElemente/: AnzahlDerElemente.c  ArraysVergleichen.c
Programmieren in C/Video13-StringsLängeUndElemente/: StringsLängeUndElemente.c
Programmieren in C/Video14-MultiArray/: MultiArray.c
Programmieren in C/Video15-Pointer/: Pointer.c
Programmieren in C/Video16-PointerInFunktionen/: PointerInFunktionen.c
PythonDefaultArgProblems/: test.py
PythonPEP8/: main.py  module.py
Sonderaktion/: BlackFriday.md
VsCodePython/: test.ipynb  test.py
VsCodePythonTasks/: test.py
VsCodePythonTasks2/: .gitignore  test.py
(+102 files in other folders)
